# Game-of-Life-C-SFML

./: Board.cpp  Board.hpp  CMakeLists.txt  Game.cpp  Game.hpp  README.md  main.cpp
